--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "henrypl.com",
   "version": "0.2.0",
   "private": true,
+  "engines": {
+    "node": "^12.13.0"
+  },
   "dependencies": {
     "@craco/craco": "^6.0.0",
     "@testing-library/jest-dom": "^5.11.4",
