--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "engines": {
-    "node": "^12.13.0"
+    "node": ">=12.13.0"
   },
   "dependencies": {
     "@craco/craco": "^6.0.0",
