--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.0.0",
-    "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat",
+    "@craco/craco": "^6.2.0",
+    "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat@2.2.7",
     "autoprefixer": "9.8.6",
     "postcss": "7.0.35",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "typescript": "^4.1.2",
-    "web-vitals": "^0.2.4"
+    "react-scripts": "4.0.3",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@2.2.7",
+    "typescript": "^4.3.5",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "craco start",
@@ -40,14 +40,14 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-router-dom": "^5.1.7",
-    "eslint-plugin-react": "^7.22.0"
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.2",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.8",
+    "eslint-plugin-react": "^7.24.0"
   }
 }
