--- a/package.json
+++ b/package.json
@@ -1,53 +1,33 @@
 {
   "name": "henrypl.com",
-  "version": "0.2.0",
+  "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@craco/craco": "^6.2.0",
-    "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat@2.2.7",
-    "autoprefixer": "9.8.6",
-    "postcss": "7.0.35",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@2.2.7",
-    "typescript": "^4.3.5",
-    "web-vitals": "^2.1.0"
-  },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build && echo '/*    /index.html   200' > build/_redirects",
-    "test": "craco test",
-    "eject": "craco eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.3",
+    "@types/mdx": "^2.0.13",
+    "lucide-react": "^0.378.0",
+    "next": "14.2.3",
+    "react": "^18",
+    "react-dom": "^18",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.2",
-    "@types/react": "^17.0.19",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.8",
-    "eslint-plugin-react": "^7.24.0"
+    "@biomejs/biome": "1.7.2",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
